--- a/2_Assessment.Rmd
+++ b/2_Assessment.Rmd
@@ -12,7 +12,7 @@ Data used in the `r spp` assessment are summarized in Figure \ref{fig:data_plot}
 
 The NWFSC shelf-slope survey is based on a random-grid design; covering the coastal waters from a depth of 55 m to 1,280 m [@bradburn_2003_2011]. This design uses four chartered industry vessels in most years, assigned to a roughly equal number of randomly selected grid cells. The survey, which has been conducted from late-May to early-October each year, is divided into two 2-vessel passes of the coast, which are executed from north to south. This design therefore incorporates both vessel-to-vessel differences in catchability as well as variance associated with selecting a relatively small number (approximately 700) of cells from a very large population of possible cells (greater than 11,000) distributed from the Mexican to the Canadian border. 
 
-The data from the NWFSC shelf-slope survey was analyzed using a spatio-temporal delta-generalized linear mixed model (VAST delta-GLMM) [@thorson_comparing_2017]. Predicted fish biomass density is derived as the product of a "delta" portion for the probability of a non-zero catch and a second portion for the magnitude of the non-zero catches.  Further, the geostatistical GLMM framework can accommodate spatial autocorrelation.  Additional information about the approach and the software package it is implemented in are available from www.fishstats.org. \hl{describe VAST}
+The data from the NWFSC shelf-slope survey was analyzed using a spatio-temporal delta-model [@thorson_geostatistical_2015], implemented as an R package VAST [@thorson_comparing_2017] and publicly available online (https://github.com/James-Thorson/VAST).  Spatial and spatio-temporal variation is specifically included in both encounter probability and positive catch rates, a logit-link for encounter probability, and a log-link for positive catch rates.  Vessel-year effects were included for each unique combination of vessel and year in the database, to account for the random selection of commercial vessels used during sampling [@helser_generalized_2004, @thorson_accounting_2014].  Spatial variation was approximated using 1000 knots, and use the bias-correction algorithm [@thorson_implementing_2016] in Template Model Builder [@kristensen_tmb:_2016].  Further details regarding model structure are available in the user manual (https://github.com/James-Thorson/VAST/blob/master/examples/VAST_user_manual.pdf).  
 
 The smallest `r spp` tend to occur in the shallower depths (< 200 m) with only larger individuals occurring at depths deeper than 300 m. Data collected by the NWFSC Shelf-Slope survey between depths of 55 - 549 m and north of $42^\circ$ and south of $49^\circ$ were stratified to generate an index of abundance from 2003-2016. The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.  The lognormal distribution with random strata-year and vessel effects had the lowest AIC and was chosen as the final model.  The Q-Q plot does not show any departures from the assumed distribution (Figure \ref{fig:nw_qq}).  The indices for the NWFSC shelf-slope survey show a tentative decline in the population between 2003 and 2009, with an increasing trend in biomass between the 2009 and 2016 median point estimates.
 
