--- a/BibFile.bib
+++ b/BibFile.bib
@@ -820,6 +820,22 @@
 	file = {Then et al. - 2015 - Evaluating the predictive performance of empirical.pdf:C\:\\Users\\Chantel.Wetzel\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\0u2lkieq.default\\zotero\\storage\\U2VIC4ND\\Then et al. - 2015 - Evaluating the predictive performance of empirical.pdf:application/pdf}
 }
 
+@article{thorson_implementing_2016,
+	title = {Implementing a generic method for bias correction in statistical models using random effects, with spatial and population dynamics examples},
+	volume = {175},
+	issn = {01657836},
+	url = {http://linkinghub.elsevier.com/retrieve/pii/S0165783615301399},
+	doi = {10.1016/j.fishres.2015.11.016},
+	language = {en},
+	urldate = {2017-04-12},
+	journal = {Fisheries Research},
+	author = {Thorson, James T. and Kristensen, Kasper},
+	month = mar,
+	year = {2016},
+	pages = {66--74},
+	file = {Thorson and Kristensen - 2016 - Implementing a generic method for bias correction .pdf:C\:\\Users\\Chantel.Wetzel\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\0u2lkieq.default\\zotero\\storage\\URNDZPVD\\Thorson and Kristensen - 2016 - Implementing a generic method for bias correction .pdf:application/pdf}
+}
+
 @article{thorson_comparing_2017,
 	title = {Comparing estimates of abundance trends and distribution shifts using single- and multispecies models of fishes and biogenic habitat},
 	issn = {1054-3139, 1095-9289},
@@ -847,4 +863,21 @@
 	institution = {Pacific Fishery Management Council, 7700 Ambassador Place NE, Suite 200, Portland, OR 97220},
 	author = {Ianelli, J. N. and Ito, Daniel H. and Wilkins, M.E.},
 	year = {1992}
+}
+
+@article{helser_generalized_2004,
+	title = {A generalized linear mixed model analysis of a multi-vessel fishery resouce survey},
+	volume = {70},
+	author = {Helser, T.E. and Punt, A. E. and Methot, R. D.},
+	year = {2004},
+	pages = {251--264}
+}
+
+@article{kristensen_tmb:_2016,
+	title = {{TMB}: {Automatic} {Differentiation} and {Laplace} {Approximation}},
+	volume = {70},
+	journal = {Journal of Statistical Software},
+	author = {Kristensen, Kasper and Nielsen, A. and Berg, Casper W and Skaug, H. J. and Bell, B.M.},
+	year = {2016},
+	pages = {1--21}
 }
